# duckadbc

examples/adbc/: CMakeLists.txt  Makefile  driver_manager.cpp  main.cpp  main_drivermanager.cpp
examples/adbc/include/: abi.h  adbc.h  driver_manager.h
src/common/arrow/: arrow_wrapper.cpp
src/include/: duckdb.h
src/include/duckdb/common/: adbc-init.hpp  adbc.h  adbc.hpp
src/main/: CMakeLists.txt  adbc.cpp
test/api/: CMakeLists.txt
test/api/adbc/: test_adbc.cpp
tools/rpkg/: .Rbuildignore  .prepare  DESCRIPTION  NAMESPACE  README.md
tools/rpkg/R/: Result.R  Viewer.R  backend-dbplyr__duckdb_connection.R  cpp11.R  dbClearResult__duckdb_result_arrow.R  dbClearResult__duckdb_result_stream.R  dbFetchArrow__duckdb_result_arrow.R  dbQuoteLiteral__duckdb_connection.R  dbSendQueryStream__duckdb_connection.R  dbStream__duckdb_result.R  dbStream__duckdb_result_stream.R  duckdb.R  relational.R
tools/rpkg/man/: backend-duckdb.Rd  duckdb_connection-class.Rd  duckdb_result-class.Rd  rel_aggregate.Rd  rel_alias.Rd  rel_distinct.Rd  rel_explain.Rd  rel_filter.Rd  rel_from_df.Rd  rel_inner_join.Rd  rel_order.Rd  rel_project.Rd  rel_set_alias.Rd  rel_sql.Rd
tools/rpkg/src/: altrep.cpp  connection.cpp  cpp11.cpp  database.cpp  rapi.cpp  register.cpp  scan.cpp  statement.cpp  utils.cpp
tools/rpkg/src/include/: rapi.hpp
tools/rpkg/tests/: testthat.R
tools/rpkg/tests/regression/: perf_regression.R
tools/rpkg/tests/testthat/: helper-DBItest.R  test_arrow.R  test_arrow_stream.R  test_explain.R  test_multi_statement.R  test_readonly.R  test_register_arrow.R  (+1 more)
(+4 files in other folders)
